--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,8 @@
 selectors). */
 body {
   margin: 25px;
-  background-color: rgb(5, 87, 90);
+  background-color: rgb(0,0,255)
+
   font-family: arial, sans-serif;
   font-size: 14px;
 }
