--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,9 @@
-/* Applies to the entire body of the HTML document (except where overridden by more specific
-selectors). */
 body {
-  margin: 25px;
-  background-color: rgb(0,0,255);
-  font-family: arial, sans-serif;
-  font-size: 14px;
+    background-color: rgb(5, 87, 90);
+    color: white;
+    padding: 30px;
 }
 
-/* Applies to all <h1>...</h1> elements. */
-h1 {
-  font-size: 35px;
-  font-weight: normal;
-  margin-top: 5px;
-}
-
-/* Applies to all elements with <... class="someclass"> specified. */
-.someclass { color: red; }
-
-/* Applies to the element with <... id="someid"> specified. */
-#someid { color: green; }
+ul {
+    border: 1px solid black;
+    padding: 20px;
